force-app/main/default/objects/Actual_And_Same_Period_Report__c/Actual_And_Same_Period_Report__c.object-meta.xml
<CustomObject>
    <label>Actual And Same Period Report</label>
    <nameField>
        <displayFormat>APR{000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual And Same Period Report</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>