force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Current_Gross_USD__c.field-meta.xml
<CustomField>
    <fullName>Current_Gross_USD__c</fullName>
    <label>MTD Gross Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>