force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Current_Net__c.field-meta.xml
<CustomField>
    <fullName>Current_Net__c</fullName>
    <label>MTD Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>