force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Current_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Volume__c</fullName>
    <label>MTD Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>