force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actual And Same Period Report</relationshipLabel>
    <relationshipName>Actual_And_Same_Period_Report</relationshipName>
    <type>Lookup</type>
</CustomField>