force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Customer_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Product Line</label>
    <referenceTo>Customer_Product_Line__c</referenceTo>
    <relationshipLabel>Actual And Same Period Report</relationshipLabel>
    <relationshipName>APRToCustomerProductLine</relationshipName>
    <type>Lookup</type>
</CustomField>