force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Gross_Average_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Gross_Average_Price_USD__c</fullName>
    <formula>IF( OR( N_Month_Sales_Volume_N_Year__c = 0 ,N_Month_Sales_Volume_N_Year__c = null) , null, N_Month_Gross_USD_N_Year__c/ N_Month_Sales_Volume_N_Year__c )</formula>
    <label>Gross Average Price(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>