force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Month_Convert__c.field-meta.xml
<CustomField>
    <fullName>Month_Convert__c</fullName>
    <formula>DATE( VALUE(Year__c) ,VALUE(Month__c) ,01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month(Convert)</label>
    <type>Date</type>
</CustomField>