force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/N_Month_Gross_N_1_Year__c.field-meta.xml
<CustomField>
    <fullName>N_Month_Gross_N_1_Year__c</fullName>
    <label>Y.O.Y. Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>