force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/N_Month_Gross_USD_N_Year__c.field-meta.xml
<CustomField>
    <fullName>N_Month_Gross_USD_N_Year__c</fullName>
    <label>Gross Amount(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>