force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>TEXT(Customer_Product_Line__r.Product_Line_Name__c)</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>