force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>TEXT(Customer__r.Sales_Region__c)</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>