force-app/main/default/objects/Actual_And_Same_Period_Report__c/fields/Share_Account_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Share_Account_Product_Line__c</fullName>
    <formula>Customer__r.Customer_SF_Code__c + Product_Line__c</formula>
    <label>*Share Account Product Line</label>
    <type>Text</type>
</CustomField>